feat: add switch language

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Mulish:200,300,regular,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./assets/favicon.ico">
     <title>Maksim Fralou</title>
 </head>
 
 <body>
     <div class="wrapper-btn-lang">
-        <button class="btn-lang">ru</button>
-        <button class="btn-lang">eng</button>
+        <button id="ru" class="btn-lang">ru</button>
+        <button id="eng" class="btn-lang">eng</button>
     </div>
-    <div class="container">
+    <div class="container-ru">
         <h1 class="title">Максим Фролов <br><span>Front-end Developer</span></h1>
         <nav class="nav">
             <ul class="contacts">
@@ -102,6 +102,93 @@
             <li>lorem</li>
         </ul>
     </div>
+    <div class="container-eng hidden">
+        <h1 class="title">Maksim Fralou<br><span>Front-end Developer</span></h1>
+        <nav class="nav">
+            <ul class="contacts">
+                <li class="list-contact">
+                    <a href="https://goo.gl/maps/gZcYg2poGsRuZBTx7" target="_blank">
+                        <img
+                            src="./assets/local.svg" 
+                            alt="Location logo" class="pic-contact local">Minsk, Belarus</a>
+                </li>
+                <li class="list-contact">
+                    <a href="mailto:fralou@protonmail.com" target="_blank">
+                        <img
+                            src="./assets/mail.svg" 
+                            alt="Mail logo" class="pic-contact mail">fralou@protonmail.com</a>
+                </li>
+                <li class="list-contact">
+                    <a href="https://discordapp.com/users/1039198455924531250/" target="_blank">
+                        <img 
+                            src="./assets/discord.svg" 
+                            alt="Discord logo" class="pic-contact discord">.genag</a>
+                </li>
+                <li class="list-contact">
+                    <a href="https://t.me/" target="_blank">
+                        <img 
+                            src="./assets/telegram.svg" 
+                            alt="Telegram logo" class="pic-contact telegram">@lorem</a>
+                </li>
+                <li class="list-contact">
+                    <a href="https://github.com/maxfralou" target="_blank">
+                        <img
+                            src="./assets/github.svg" 
+                            alt="Github logo" class="pic-contact github">@maxfralou</a>
+                </li>
+            </ul>
+        </nav>
+        <h3 class="title-part">Summary</h3>
+        <hr>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde obcaecati maxime incidunt? Nemo aut nulla qui
+            sint quas, enim dignissimos non libero repellendus eveniet a deleniti, placeat magni inventore voluptatibus.
+        </p>
+        <h3 class="title-part">Professional experience</h3>
+        <hr>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+        </p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+        </p>
+        <h3 class="title-part">Projects</h3>
+        <hr>
+        <ul>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+        </ul>
+        <h3 class="title-part">Education</h3>
+        <hr>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+        </p>
+        <h3 class="title-part">Courses</h3>
+        <hr>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
+            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
+        </p>
+        <h3 class="title-part">Skills</h3>
+        <hr>
+        <ul>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+            <li>lorem</li>
+        </ul>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
