--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <div class="wrapper-btn-lang">
-        <button id="ru" class="btn-lang">ru</button>
-        <button id="eng" class="btn-lang">eng</button>
+        <div id="ru" class="btn-lang ru-btn switch-lang-ru"></div>
+        <div id="eng" class="btn-lang eng-lang"></div>
     </div>
     <div class="container-ru">
         <h1 class="title">Максим Фролов <br><span>Front-end Developer</span></h1>
