fix: fix and refactor

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Mulish:200,300,regular,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900" rel="stylesheet" />
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./assets/favicon.ico">
@@ -13,8 +13,8 @@
 
 <body>
     <div class="wrapper-btn-lang">
-        <div id="ru" class="btn-lang ru-btn switch-lang-ru"></div>
-        <div id="eng" class="btn-lang eng-lang"></div>
+        <div id="ru" class="btn-lang flag-lang">рус</div>
+        <div id="eng" class="btn-lang">eng</div>
     </div>
     <div class="container-ru">
         <h1 class="title">Максим Фролов <br><span>Front-end Developer</span></h1>
@@ -52,12 +52,11 @@
                 </li>
             </ul>
         </nav>
-        <h3 class="title-part">Summary</h3>
+        <h3 class="title-part">Кратко обо мне</h3>
         <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde obcaecati maxime incidunt? Nemo aut nulla qui
-            sint quas, enim dignissimos non libero repellendus eveniet a deleniti, placeat magni inventore voluptatibus.
+        <p>Привет! 
         </p>
-        <h3 class="title-part">Professional experience</h3>
+        <h3 class="title-part">Опыт работы</h3>
         <hr>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
             vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
@@ -69,7 +68,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
             vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
         </p>
-        <h3 class="title-part">Projects</h3>
+        <h3 class="title-part">Проекты</h3>
         <hr>
         <ul>
             <li>lorem</li>
@@ -78,21 +77,21 @@
             <li>lorem</li>
             <li>lorem</li>
         </ul>
-        <h3 class="title-part">Education</h3>
+        <h3 class="title-part">Образование</h3>
         <hr>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
             vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
             vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
         </p>
-        <h3 class="title-part">Courses</h3>
+        <h3 class="title-part">Курсы</h3>
         <hr>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
             vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
             vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
         </p>
-        <h3 class="title-part">Skills</h3>
+        <h3 class="title-part">Технологии</h3>
         <hr>
         <ul>
             <li>lorem</li>
