--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" href="./assets/favicon.ico">
@@ -12,182 +12,85 @@
 </head>
 
 <body>
-    <div class="wrapper-btn-lang">
-        <div id="ru" class="btn-lang flag-lang">рус</div>
-        <div id="eng" class="btn-lang">eng</div>
-    </div>
     <div class="container-ru">
-        <h1 class="title">Максим Фролов <br><span>Front-end Developer</span></h1>
+        <div class="title-container">
+            <h1 class="title">Максим Фролов<br><span>Front-end Developer</span></h1>
+            <a href="https://github.com/maxfralou" target="_blank"><img src="./assets/maksim.jpeg" alt="My photo"
+                    class="my-photo"></a>
+        </div>
         <nav class="nav">
             <ul class="contacts">
                 <li class="list-contact">
-                    <a href="https://goo.gl/maps/gZcYg2poGsRuZBTx7" target="_blank">
-                        <img
-                            src="./assets/local.svg" 
-                            alt="Location logo" class="pic-contact local">Minsk, Belarus</a>
+                    <a href="tel:+375257403106" target="_blank">
+                        <img src="./assets/phone.svg" alt="Phone logo" class="pic-contact tel">+375(25)740-31-06</a>
                 </li>
                 <li class="list-contact">
                     <a href="mailto:fralou@protonmail.com" target="_blank">
-                        <img
-                            src="./assets/mail.svg" 
-                            alt="Mail logo" class="pic-contact mail">fralou@protonmail.com</a>
+                        <img src="./assets/mail.svg" alt="Mail logo" class="pic-contact mail">fralou@protonmail.com</a>
                 </li>
                 <li class="list-contact">
                     <a href="https://discordapp.com/users/1039198455924531250/" target="_blank">
-                        <img 
-                            src="./assets/discord.svg" 
-                            alt="Discord logo" class="pic-contact discord">.genag</a>
+                        <img src="./assets/discord.svg" alt="Discord logo" class="pic-contact discord">.maxFralou</a>
                 </li>
                 <li class="list-contact">
-                    <a href="https://t.me/" target="_blank">
-                        <img 
-                            src="./assets/telegram.svg" 
-                            alt="Telegram logo" class="pic-contact telegram">@lorem</a>
-                </li>
-                <li class="list-contact">
-                    <a href="https://github.com/maxfralou" target="_blank">
-                        <img
-                            src="./assets/github.svg" 
-                            alt="Github logo" class="pic-contact github">@maxfralou</a>
+                    <a href="https://t.me/maxFralou" target="_blank">
+                        <img src="./assets/telegram.svg" alt="Telegram logo" class="pic-contact telegram">@maxFralou</a>
                 </li>
             </ul>
         </nav>
         <h3 class="title-part">Кратко обо мне</h3>
         <hr>
-        <p>Привет! 
+        <p>Здравствуйте! Меня зовут Максим Фролов. Проживаю в Минске. Ищу позицию junior фронтенд разработчика, в офисе
+            или удаленно. В течение последнего года успешно прошел переквалификацию по специальности фронтенд
+            разработчик. Мне 35 лет, имею высшее образование, женат.
         </p>
         <h3 class="title-part">Опыт работы</h3>
         <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
-        <h3 class="title-part">Проекты</h3>
-        <hr>
+        <p>С декабря 2022 года я проходил переобучение по программе The Rolling Scopes School.
+            В этот период я тратил на изучение и выполнения заданий более 40 часов в неделю.
+            В рамках обучения я выполнил несколько разноплановых проектов:</p>
         <ul>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
+            <li><a href="https://maxfralou.github.io/plants-2022Q4/" target="_blank"><b>Plants:</b></a> реализована
+                верстка pixel-perfect по макету <a
+                    href="https://www.figma.com/file/ntVt8IwlwzfVFMBuVVAze8/Plants?type=design&node-id=0-1&mode=design"
+                    target="_blank">Figma</a>, адаптивный дизайн desktop 1440px,
+                tablet 768px и mobile 380px, базовая интерактивность с помощью JavaScript.</li>
+            <li><a href="https://maxfralou.github.io/shelter-2023Q1/" target="_blank"><b>Shelter:</b></a> верстка
+                pixel-perfect по макету <a href="https://www.figma.com/file/Yk6EnbY63FyG2PJTFkJDMh/shelter"
+                    target="_blank">Figma</a>, адаптивный дизайн и базовая интерактивность включая карусель,
+                пагинацию, pop-up.</li>
+            <li><a href="https://maxfralou.github.io/virtual-keyboard/" target="_blank"><b>Virtual keyboard:</b></a>
+                навыки работы с DOM Events.</li>
+            <li><a href="https://maxfralou.github.io/minesweeper-2023Q1/" target="_blank"><b>Minesweeper:</b></a>
+                реализация классической игры "Сапер". Приобрел навыки работы со структурой данных Matrix, браузерные
+                API.
+            </li>
+            <li><a href="https://code-witchers.netlify.app/" target="_blank"><b>eCommerce application:</b></a>
+                опыт командной разработки, работа с REST API.
+            </li>
+        </ul>
+        <p>До переквалификации занимался предпринимательством:</p>
+        <ul>
+            <li>Производство металлоконструкций <em>2014-2018</em></li>
+            <li>Бренд одежды <em>2019-2022</em></li>
         </ul>
         <h3 class="title-part">Образование</h3>
         <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
+        <ul>
+            <li>Белорусская государственная академия музыки <em>2013</em></li>
+        </ul>
         <h3 class="title-part">Курсы</h3>
         <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
+        <ul>
+            <li><a href="https://app.rs.school/certificate/yfxaiybc" target="_blank">JS/FE Pre-School 2022Q4</a></li>
+            <li><a href="https://app.rs.school/certificate/yfxaiybc" target="_blank">JavaScript/Front-end 2023Q1</a>
+            </li>
+        </ul>
         <h3 class="title-part">Технологии</h3>
         <hr>
         <ul>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
+            <li>HTML5, CSS3, JavaScript (TS)</li>
+            <li>ReactJS</li>
+            <li>Other: Git, WebPack, Vite, EsLint...</li>
         </ul>
     </div>
-    <div class="container-eng hidden">
-        <h1 class="title">Maksim Fralou<br><span>Front-end Developer</span></h1>
-        <nav class="nav">
-            <ul class="contacts">
-                <li class="list-contact">
-                    <a href="https://goo.gl/maps/gZcYg2poGsRuZBTx7" target="_blank">
-                        <img
-                            src="./assets/local.svg" 
-                            alt="Location logo" class="pic-contact local">Minsk, Belarus</a>
-                </li>
-                <li class="list-contact">
-                    <a href="mailto:fralou@protonmail.com" target="_blank">
-                        <img
-                            src="./assets/mail.svg" 
-                            alt="Mail logo" class="pic-contact mail">fralou@protonmail.com</a>
-                </li>
-                <li class="list-contact">
-                    <a href="https://discordapp.com/users/1039198455924531250/" target="_blank">
-                        <img 
-                            src="./assets/discord.svg" 
-                            alt="Discord logo" class="pic-contact discord">.genag</a>
-                </li>
-                <li class="list-contact">
-                    <a href="https://t.me/" target="_blank">
-                        <img 
-                            src="./assets/telegram.svg" 
-                            alt="Telegram logo" class="pic-contact telegram">@lorem</a>
-                </li>
-                <li class="list-contact">
-                    <a href="https://github.com/maxfralou" target="_blank">
-                        <img
-                            src="./assets/github.svg" 
-                            alt="Github logo" class="pic-contact github">@maxfralou</a>
-                </li>
-            </ul>
-        </nav>
-        <h3 class="title-part">Summary</h3>
-        <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde obcaecati maxime incidunt? Nemo aut nulla qui
-            sint quas, enim dignissimos non libero repellendus eveniet a deleniti, placeat magni inventore voluptatibus.
-        </p>
-        <h3 class="title-part">Professional experience</h3>
-        <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
-        <h3 class="title-part">Projects</h3>
-        <hr>
-        <ul>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-        </ul>
-        <h3 class="title-part">Education</h3>
-        <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
-        <h3 class="title-part">Courses</h3>
-        <hr>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate eum accusantium cumque rerum blanditiis
-            vitae, ab commodi quia cupiditate reiciendis quas, inventore ad totam porro sunt corrupti ipsam id tenetur.
-        </p>
-        <h3 class="title-part">Skills</h3>
-        <hr>
-        <ul>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-            <li>lorem</li>
-        </ul>
-    </div>
-    <script src="index.js"></script>
-</body>
-
-</html>
