--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 реализация классической игры "Сапер". Приобрел навыки работы со структурой данных Matrix, браузерные
                 API.
             </li>
-            <li><a href="https://code-witchers.netlify.app/" target="_blank"><b>eCommerce application:</b></a>
+            <li><a href="https://github.com/akatimer/eCommerceApplication" target="_blank"><b>eCommerce application:</b></a>
                 опыт командной разработки, работа с REST API.
             </li>
         </ul>
